--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "deploy": "wrangler deploy"
   },
   "dependencies": {
+    "@auth/core": "0.37.0",
     "@cloudflare/vite-plugin": "^1.13.8",
+    "@convex-dev/auth": "^0.0.90",
     "@convex-dev/react-query": "0.0.0-alpha.11",
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/react-devtools": "^0.7.0",
